chore: remove unused imports